tests/negative/is_check_on_generic_union.glyph
module neg

type S<T> = A | B(T)

fn f(v: unknown) -> number {
  return match v {
    is S => 1,
    else => 0,
  }
}
